--- a/health_insurance_cross_sell.ipynb
+++ b/health_insurance_cross_sell.ipynb
@@ -90,9 +90,7 @@
   {
    "cell_type": "markdown",
    "id": "a42cb84d",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 0.2. Loading data"
    ]
@@ -100,28 +98,24 @@
   {
    "cell_type": "markdown",
    "id": "70c752b8",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### 0.1.1. Creating connection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "f1d1b166",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-28T20:44:06.814872Z",
-     "start_time": "2022-09-28T20:44:03.984061Z"
-    },
-    "hidden": true
+     "end_time": "2022-09-28T22:07:08.574003Z",
+     "start_time": "2022-09-28T22:07:05.819961Z"
+    }
    },
    "outputs": [],
    "source": [
-    "with open('credentials.json') as json_file:\n",
+    "with open('credentials/credentials.json') as json_file:\n",
     "     credentials= json.load(json_file)\n",
     "        \n",
     "host = credentials['host']\n",
@@ -138,8 +132,7 @@
    "cell_type": "markdown",
    "id": "deca37cb",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### 0.1.2. Query Schemas"
@@ -268,8 +261,7 @@
    "cell_type": "markdown",
    "id": "bba6cc8b",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### 0.1.3. Query Tables"
@@ -354,8 +346,7 @@
    "cell_type": "markdown",
    "id": "c28d8a06",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### 0.1.4. Query Join Tables"
@@ -386,24 +377,20 @@
   {
    "cell_type": "markdown",
    "id": "9762bff3",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### 0.1.5. Close connection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "50e616c3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-28T20:44:32.135678Z",
-     "start_time": "2022-09-28T20:44:31.954154Z"
-    },
-    "hidden": true
+     "end_time": "2022-09-28T22:07:13.088532Z",
+     "start_time": "2022-09-28T22:07:13.075597Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -882,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "57c7c558",
+   "id": "bd09d41b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-09-28T21:20:42.673785Z",
@@ -897,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17c18f7b",
+   "id": "e573a665",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -936,7 +923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c750209d",
+   "id": "a98eb533",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -947,7 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c8da03c",
+   "id": "d7e77042",
    "metadata": {
     "hidden": true
    },
@@ -965,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc65fd56",
+   "id": "40c179f3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-09-28T21:22:40.145895Z",
@@ -980,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "000648a1",
+   "id": "e622c9bb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-09-28T21:29:36.318261Z",
@@ -999,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e65a269",
+   "id": "b4c19d84",
    "metadata": {
     "heading_collapsed": true
    },
@@ -1009,7 +996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52e39525",
+   "id": "8c401e50",
    "metadata": {},
    "source": [
     "# 4.0. EXPLORATORY DATA ANALYSIS"
@@ -1018,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "efd13472",
+   "id": "3aa0ed50",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-09-28T21:33:28.016978Z",
@@ -1033,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57aae70f",
+   "id": "60efe28a",
    "metadata": {},
    "outputs": [],
    "source": []
